# icpc-notebook

./: .gitignore  CMakeLists.txt  LICENSE  LINKS.md  README.md  index.html  main.min.css  main.min.js  print.min.css  screen.min.css
.js/: main.js
.local/: CMakeLists.txt  run.sh
.local/src/: main.cpp
.styles/: main.less  print.less  screen.less
.templates/: default.jade
.templates/views/: index.jade
